Added option "Auto fit factor".
Don't remember the full screen, if the option "RememberWindowPos" and "RememberWindowSize".

Updated Dutch and Chinese (Traditional) translation (by beter).
Updated Ukrainian translation (by arestarh1986).
Updated Japanese translation (by Socket774).
Updated German translation (by Klaus1189).
Updated Chinese (Simplified) translation (by beter and insolo).

Updated libraries:
	jsoncpp 1.0.0-212 git-gc1e834a.
	MediaInfo 0.7.72+ svn rev.6720;
	ffmpeg git-g399e314.

1.4.3
==============================

Removed AMRSplitter.
Removed WVSplitter;

VTSReader
Added a dialog box with settings to choose from IFO file all programs or only the first (Program Chain).
Added support for opening files of the IFO-ATS_XX_0.IFO (DVD-Audio language). The filter will load the chapters with the same format (LPCM or MLP) and the same channel laouts from AOB files.

ShoutcastSource
Added support for UTF8 in the title and description.

DTSAC3Source
Fixed overflow when searching for large files.

FLACSource
Added support for ID3 tags V2.
The missing data at the end of the file, cosmetics.

AudioSplitter
Added support for WavPack, AMR, AMR-WB, DSF, DFF.
Prevented a possible crash when playing TAK.

MpaSplitter
Fixed incorrect connection to other types of files.
Allowed to change the title of the block when playing (occurs when writing online broadcasts).
Improved work with streaming data.
Improved synchronization (title search) after rewinding.

AVISplitter
Complemented ID list of codecs that are H.264 video (list taken from ffmpeg).
Corrected output MediaType for H.264.
Improved support for Matrox MPEG2 codecs, added fourcc M701-M705.

MatroskaSplitter
Added support CueDuration and CueRelativePosition to pre-read the subtitles.
Added option "Calculate the duration based on the video data".
More correct filling data for MPEG1 Layer 1/2, TrueHD / MLP and HEVC.
Fixed playback of H.264 interlaced video.