@@ -37,7 +37,7 @@
 #define MPC_VERSION_MINOR       4
 #define MPC_VERSION_PATCH       4
 
-#define MPC_VERSION_STATUS      0
+#define MPC_VERSION_STATUS      1
 // MPC_VERSION_STATUS: 0 - beta; 1 - stable
 
 #define MPC_WND_CLASS_NAME      "MPC-BE"
